# tidydf

./: LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/betterdf/: __init__.py  _apply.py  _assert_types.py  _cast.py  _collapse.py  _keep.py  _mutate.py  _peek.py  _relabel.py  _select.py  _strict_series.py
src/tidydf/: __init__.py  _apply.py  _keep.py  _mutate.py
tests/: test_apply.py  test_assert_types.py  test_cast.py  test_collapse.py  test_keep.py  test_mutate.py  test_peek.py  test_relabel.py  test_select.py
